# imu-sensor

./: .cproject  .project  CMakeLists.txt
main/: CMakeLists.txt  esp_mpl_support.h  main.c  mpu_9250_i2c.c  mpu_9250_i2c.h
main/algo/: const.h  euclidean.c  euclidean.h  madgwick.c  madgwick.h  mathutil.h  param.c  param.h  quaternion.c  quaternion.h  rotation_vector.c  rotation_vector.h
motion_driver_6.12/arm/SH_V1_MD6/Projects/eMD6/core/driver/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
motion_driver_6.12/arm/SH_V1_MD6/Projects/eMD6/core/driver/include/: log.h
motion_driver_6.12/arm/SH_V1_MD6/Projects/eMD6/core/eMPL-hal/: eMPL_outputs.c
motion_driver_6.12/arm/SH_V1_MD6/Projects/eMD6/core/mllite/: data_builder.c  hal_outputs.c  hal_outputs.h
motion_driver_6.12/msp430/eMD-6.0/core/driver/eMPL/: inv_mpu.c
